# nix-flakes-domain

./: README.md  flake.nix  pyproject.toml  setup.cfg
PythonEDANixFlakes/: flake.py  flake_available.py  flake_created.py  flake_in_progress.py  flake_repo.py  flake_requested.py  license.py
PythonEDANixFlakes/recipe/: base_flake_recipe.py  flake_recipe.py  flake_recipe_repo.py  formatted_flake.py  formatted_flake_python_package.py  formatted_nixpkgs_python_package.py  formatted_python_package.py  formatted_python_package_list.py
nix/: devShells.nix
pythonedanixflakes/: description.py  flake.py  flake_in_progress.py  flake_repo.py
pythonedanixflakes/recipe/: base_flake_recipe.py  empty_flake_metadata_section_in_recipe_toml.py  empty_flake_section_in_recipe_toml.py  flake_recipe.py  flake_recipe_repo.py  formatted_flake.py  formatted_flake_python_package.py  formatted_nixpkgs_python_package.py  formatted_python_package.py  formatted_python_package_list.py  missing_flake_section_in_recipe_toml.py  missing_flake_version_spec_in_recipe_toml.py  missing_recipe_toml.py  missing_type_in_flake_metadata_section_in_recipe_toml.py  more_than_one_flake_in_recipe_toml.py  recipe_does_not_support_placeholder.py
