[tool.poetry]
name = "pythoneda-nix-flakes"
version = "0.0.1a1"
description = "Nix Flakes in PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDANixFlakes"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "^0.0.1a5"
pythoneda-git-repositories = "^0.0.1a3"
pythoneda-nix-shared = "^0.0.1a3"
pythoneda-python-packages = "^0.0.1a2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
