[tool.poetry]
name = "pythoneda-nix-flakes"
version = "0.0.1a3"
description = "PythonEDA's Nix Flakes domain"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda/nix-flakes"
packages = [{include = "pythonedanixflakes"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a15"
pythoneda-event-nix-flakes = "^0.0.1a1"
pythoneda-shared-nix = "^0.0.1a4"
pythoneda-shared-git = "^0.0.1a2"
#pythoneda-shared-python-packages = "^0.0.1a1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
